fixed z-index on circular timer

--- a/frontend/src/CircularTimer.css
+++ b/frontend/src/CircularTimer.css
@@ -6,7 +6,7 @@
     overflow: hidden;
     position: relative;
     margin: auto;
-    z-index: 1;
+    z-index: -1;
 
     
   }
